--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="calculatorBody">
         <div id="calculatorDisplay">
-            <div>
-                <span id="result"></span>
+            <div id="calculatorDisplayTop">
                 <span id="displayOperand"></span>
+                <span id="result"></span>
             </div>
             <span id="displayValue">0</span>
         </div>
